name:                  tracy
version:               0.1.0.0
synopsis:              Simple ray tracer.
description:           Simple ray tracer.
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:
category:              Graphics
build-type:            Simple
cabal-version:         >= 1.8

library
  exposed-modules:     Graphics.Tracy.Light
                       Graphics.Tracy.Material
                       Graphics.Tracy.Prim
                       Graphics.Tracy.Scene
                       Graphics.Tracy.Tracer
                       Graphics.Tracy.V3
  build-depends:       base   >= 4.6
                     , random >= 1.0
                     , data-default
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall

executable tracy
  main-is:             Main.hs
  build-depends:       base
                     , tracy
                     , random
                     , data-default
                     , filepath    >= 1.3.0
                     , JuicyPixels >= 3
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
