name:                  tracy
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Sam Truzjan
maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
copyright:             (c) 2013-2014 Sam Truzjan
category:              Graphics
build-type:            Simple
cabal-version:         >= 1.8
synopsis:              A simple ray tracer.
description:           A simple ray tracer.

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Tracy.Light
                       Graphics.Tracy.Material
                       Graphics.Tracy.Geometry
                       Graphics.Tracy.Scene
                       Graphics.Tracy.Tracer
                       Graphics.Tracy.V3
  build-depends:       base   >= 4.6
                     , random >= 1.0
                     , data-default
  ghc-options:         -O2 -Wall

executable tracy
  main-is:             Main.hs
  build-depends:       base
                     , tracy
                     , random
                     , data-default
                     , filepath    >= 1.3.0
                     , JuicyPixels >= 3
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
